2022-06-23  Jim Fowler  <jrf@biblion>

	* Tools/python/scripts/verify (main): Add entry count to
	final output.

	* Tools/python/aabooks/lib/headerwindow.py (HeaderWindow):
	Cleaned up code for python 3.9 and added test for None in
	save_header_text()

	* Docs/Hjs/catalogue_xml.py (get_author_string): Added multiple
	author/editors to catalogue.  Also added comments.

2022-06-21  Jim Fowler  <jrf@biblion>

	* Tools/python/scripts/verify (main): Corrected test for
	args.count for ending the testing

2022-06-18  Jim Fowler  <jrf@biblion>

	* Tools/python/aabooks/lib/headerwindow.py
	(HeaderWindow.ask_and_close): Corrected spelling mistake for
	no_save_close() in the switch after the dialog box.

2022-06-11  Jim Fowler  <jrf@biblion>

	* Tools/python/aabooks/journal/jsearch.py
	(JournalSearch.__init__): Correct slot _new_entry() to new_entry()

2022-05-15  Jim Fowler  <jrf@biblion>

	* Tools/python/aabooks/journal/journalfile.py
	(JournalFile.__init__): Added filename of __init__() in the
	JournalFile class.  We can open the file during instatiation now.

	* Tools/python/aabooks/lib/entrylist.py: removed __add__() and
	__iadd__() from the EntryList class. They new functions did not
	work as expected.

	* Tools/python/aabooks/ajbbook/bookfile.py
	(BookFile.write_file_xml): Added __add__() and extend() to the
	BookFile class.  I can now add '+' two BookFiles or extend one of
	them with a second BookFile.

	* Tools/python/aabooks/journal/journalfile.py: Added __add__() and
	extend() to JournalFile class. I can now add '+' two JournalFiles
	or extend one of them with a second JournalFile

2022-05-13  Jim Fowler  <jrf@biblion>

	* Tools/python/aabooks/lib/entrylist.py (EntryList.__add__):
	Created the __add__() and __iadd__() so that I can add or extend
	the EntryList class

2022-04-24  Jim Fowler  <jrf@biblion>

	* Tools/python/aabooks/lib/search.py (__get_sub_strings__): Add
	test for strings less than min_length.  If so, add them to the